# Fugue

./: .env.example  .gitignore  CONTRIBUTING.md  PLUGIN_SDK_DOCUMENTATION.md  README.md  README_zh.md  STARTUP_GUIDE.md  check-frontend.sh  check_project.sh  dev.py  docker-compose.yml  docker-start.bat  docker-start.sh  package-lock.json  package.json  run_tests.sh  start-dev.bat  start-dev.sh  start-local.bat  verify_ci.sh
backend/: .env.example  .gitignore  2_plus_2_result.docx  Celery_README.md  Dockerfile  README.md  agentforge.db-shm  agentforge.db-wal  alembic.ini  coverage.xml  fugue.db-shm  fugue.db-wal  fugue.spec  init_data.py  pyproject.toml  requirements-lock.txt  requirements.txt  seed_demo.py  start.sh  test_background_task.py  test_celery.py
backend/alembic/: env.py
backend/app/: __main__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  agents.py  api_keys.py  approvals.py  auth.py  crews.py  demo.py  executions.py  exports.py  files.py  iterations.py  knowledge_bases.py  mcp.py  mcp_server.py  plugins.py  plugins_marketplace.py  published.py  reviews.py  schedules.py  skills.py  tasks.py  templates.py  tools.py  validation.py  webhooks.py  websocket.py
backend/app/core/: __init__.py  config.py  database.py  encryption.py  exceptions.py  logging_config.py  observability.py  rate_limiter.py  redis.py  security.py  websocket_manager.py
backend/app/engine/: a2a.py  checkpoint_manager.py  conditions.py  executor.py  flow_executor.py  llm_provider.py  local_fs_client.py  mcp_adapter.py  message_builder.py  prompt_builder.py  sandbox.py  task_runner.py  tool_loop.py  tools.py
backend/app/mcp_server/: __init__.py  prompts.py  resources.py  server.py  tools.py
backend/app/middleware/: rate_limit.py  security.py
backend/app/models/: __init__.py  agent.py  api_key.py  base.py  checkpoint.py  condition.py  crew.py  execution.py  flow_config.py  human_review.py  iteration.py  llm_provider.py  loop.py  mcp_server.py  memory.py  plugin.py  plugin_review.py  published_workflow.py  scheduled_task.py  skill.py  task.py  template.py  user.py  webhook.py
backend/app/plugins/: __init__.py  base.py  loader.py  manager.py  sandbox.py  skills.py
backend/app/plugins/plugins/: enhanced_tools_plugin.py  example_plugin.py  local_fs_plugin.py
backend/app/schemas/: __init__.py  agent.py  approval.py  crew.py  execution.py  iteration.py  mcp_server.py  task.py  template.py  user.py
backend/app/services/: approval_manager.py  event_publisher.py  export_service.py  file_storage.py  mcp_marketplace.py  memory_service.py  scheduler_service.py  template_marketplace.py  template_seeder.py  vector_store.py  webhook_service.py  worktree_manager.py
backend/app/tasks/: __init__.py  celery_app.py  execution_tasks.py
backend/tests/: conftest.py  test_advanced_features.py  test_agents.py  test_approval.py  test_auth.py  test_crews.py  test_executions.py  test_executor.py  test_iteration_api.py  test_iteration_engine.py  test_iteration_events.py  test_iteration_migration.py  test_iteration_model.py  test_iteration_schemas.py  test_llm_provider.py  test_mcp_server.py  test_mcp_server_api.py  test_memory_service.py  test_prompt_builder.py  test_rate_limiter.py  test_sandbox.py  test_scheduled_task_model.py  test_tasks.py  test_templates.py  test_tools.py  test_validation.py  test_webhook_model.py  test_webhook_service.py  test_worktree.py
backend/tests/integration/: test_iteration_flow.py  test_p0_integration.py
docs/: DEMO_GUIDE.md  DEPLOYMENT.md  QUICK_START.md  SECURITY_CHECKLIST.md  agent-tools-deep-research-report.md  design-spec-dual-state-kinetic.md  design-spec-v2.md  plugin-sdk.md
frontend/: Dockerfile  Dockerfile.prod  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.e2e.json  vite.config.ts
frontend/src-tauri/: Cargo.toml  calculation_result.docx  calculation_result.txt  tauri.conf.json  计算结果.docx
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/nsis/: uninstaller.nsh
frontend/src-tauri/src/: lib.rs  local_fs_server.rs  main.rs
frontend/src-tauri/src/commands/: local_fs.rs
scripts/: security-audit.sh
tests/: deep_verify.py  e2e_test.py  performance_test.py  test_stats_api.py  (+1 more)
(+127 files in other folders)
