[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fugue"
version = "0.1.0"
description = "Fugue - 多智能体协作工作流平台"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"

[tool.hatch.build.targets.wheel]
packages = ["app"]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
    "python-multipart>=0.0.18",
    "redis>=5.2.0",
    "celery>=5.4.0",
    "chromadb>=0.5.0",
    "httpx>=0.28.0",
    "websockets>=14.0",
    "python-dotenv>=1.0.0",
    "cryptography>=44.0.0",
    "minio>=7.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 150
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "E501",   # line too long
    "E402",   # module level import not at top
    "E701",   # multiple statements on one line
    "E712",   # comparison to True/False
    "E741",   # ambiguous variable name
    "F401",   # unused import
    "F601",   # dictionary key repeated
    "F821",   # undefined name
    "F841",   # unused variable
    "N802",   # function name should be lowercase
    "N806",   # variable in function should be lowercase
    "N817",   # camelcase imported as acronym
    "UP042",  # use StrEnum
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disable_error_code = [
    "import-untyped",
    "import-not-found",
    "assignment",
    "arg-type",
    "return-value",
    "attr-defined",
    "name-defined",
    "index",
    "union-attr",
    "misc",
    "override",
    "no-redef",
    "valid-type",
    "syntax",
    "var-annotated",
    "call-arg",
    "call-overload",
    "dict-item",
    "type-var",
    "truthy-function",
    "operator",
    "has-type",
    "func-returns-value",
    "unused-coroutine",
]
exclude = ["tests/"]
