[package]
name = "fugue"
version = "0.1.0"
description = "Fugue - Multi-Agent Workflow Platform"
authors = ["Fugue Contributors"]
edition = "2021"

[lib]
name = "fugue_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
chardet = "0.2"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
encoding_rs = "0.8"
rand = "0.8"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
